<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/setting_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/frameTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/market_top_bg" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/btn_back" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/titleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/setting_about"
            android:textColor="@android:color/white" />
    </RelativeLayout>
    
    <ImageView
		android:id="@+id/about_logo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="30dp"
		android:contentDescription="@string/app_name"
		android:layout_gravity="center"
		android:background="@drawable/about_logo" />
    
    <TextView 
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content"
        android:text="@string/about_title"
        android:textColor="#e74c3c"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>
    
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15dp"
	    android:orientation="horizontal"
	    android:gravity="center">
        
        <TextView 
	        android:layout_height="wrap_content" 
	        android:layout_width="wrap_content"
	        android:text="@string/about_version"
	        android:textColor="#c0392b"
	        android:textSize="16sp"
	        />
        
        <TextView 
            android:id="@+id/tvVersion"
	        android:layout_height="wrap_content" 
	        android:layout_width="wrap_content"
	        android:text="V3.5.2"
	        android:textColor="#c0392b"
	        android:textSize="16sp"
	        android:layout_marginLeft="10dp"/>
        
    </LinearLayout>
    
    <TextView 
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content"
        android:text="@string/about_content"
        android:textColor="#747474"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"/>
</LinearLayout>