<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/setting_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/frameTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/market_top_bg" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/btn_back" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/titleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/setting_help"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/about_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/about_logo"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/about_title"
        android:textColor="#e74c3c"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_version"
            android:textColor="#c0392b"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="#c0392b"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#ffffff" >
        
        <ImageView
            android:id="@+id/top_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/line"
            android:contentDescription="@string/app_name" />

        <RelativeLayout
            android:id="@+id/qq_area"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@id/top_line"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp" >

            <TextView
                android:id="@+id/gameCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/help_qq"
                android:textColor="#272727"
                android:textSize="18sp" />
            
            <TextView
                android:id="@+id/tv_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:textColor="#747474"
                android:textSize="18sp" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/about_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/qq_area"
            android:layout_centerHorizontal="true"
            android:background="@drawable/line"
            android:contentDescription="@string/app_name" />

        <RelativeLayout
            android:id="@+id/qq_group_area"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@id/about_line"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/typeName"
                android:text="@string/help_qq_group"
                android:textColor="#272727"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_qq_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:textColor="#747474"
                android:textSize="18sp" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/feedback_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/qq_group_area"
            android:layout_centerHorizontal="true"
            android:background="@drawable/line"
            android:contentDescription="@string/app_name" />

        <RelativeLayout
            android:id="@+id/email_area"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@id/feedback_line"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/typeName"
                android:text="@string/help_email"
                android:textColor="#272727"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:textColor="#747474"
                android:textSize="18sp" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/help_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/email_area"
            android:layout_centerHorizontal="true"
            android:background="@drawable/line"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>

</LinearLayout>