<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/frameTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/market_top_bg" >

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/btn_back" />

            <TextView
                android:id="@+id/tvBack"
                style="@style/titleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/game_detail"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp" >

            <ImageView
                android:id="@+id/icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/app_name"
                android:gravity="center"
                android:src="@drawable/game_icon" >
            </ImageView>

            <TextView
                android:id="@+id/gameName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/icon"
                android:textColor="#272727"
                android:textSize="18dp" />

            <LinearLayout
                android:id="@+id/starsArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/gameName"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="6dp"
                android:layout_toRightOf="@id/icon"
                android:orientation="horizontal" >

            </LinearLayout>

            <LinearLayout
                android:id="@+id/downloadArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/gameName"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="6dp"
                android:layout_toRightOf="@id/starsArea" >

                <TextView
                    android:id="@+id/downloadCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/btn_download"
                    android:textColor="#1abc9c"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/gameSizeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/starsArea"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="6dp"
                android:layout_toRightOf="@id/icon" >

                <TextView
                    android:id="@+id/gameSizeLable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_size"
                    android:textColor="#747474" />

                <TextView
                    android:id="@+id/gameSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#747474" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/gameVersionLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/gameSizeLayout"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="6dp"
                android:layout_toRightOf="@id/icon" >

                <TextView
                    android:id="@+id/versionLable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/icon"
                    android:text="@string/game_version"
                    android:textColor="#747474" />

                <TextView
                    android:id="@+id/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#747474" />
            </LinearLayout>

            <com.mykj.lobby.market.ButtonView
	            android:id="@+id/download"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_centerVertical="true"
	            android:layout_marginRight="5dp" />
        </RelativeLayout>

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/line"
            android:contentDescription="@string/app_name" />

        <android.support.v4.view.ViewPager
            android:id="@+id/advViewPager"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:flipInterval="30"
            android:persistentDrawingCache="animation" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/line"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6dp"
            android:text="游戏介绍"
            android:textColor="#272727"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/gameDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="游戏介绍游戏介绍游戏介绍游戏介绍游戏介绍游戏介绍游戏介绍游戏介绍游戏介绍游戏介绍游戏介绍游戏介绍游戏介绍游戏介绍游戏介绍游戏介绍游戏介绍游戏介绍游戏介绍游戏介绍游戏介绍游戏介绍" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/line"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="6dp"
            android:text="小伙伴们推荐"
            android:textColor="#272727"
            android:textSize="18dp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <LinearLayout
                android:id="@+id/recommendGameArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

</ScrollView>